# admin_panel

./: .flake8  docker-compose.yaml  pyproject.toml
movies_admin/config/: .env_example  settings.py
movies_admin/movies/: admin.py  models.py
movies_admin/movies/locale/en/LC_MESSAGES/: django.po
movies_admin/movies/locale/ru/LC_MESSAGES/: django.po
movies_admin/movies/migrations/: 0001_initial.py
schema_design/: README.md  movies_db.ddl
