[tool.poetry]
name = "admin-panel"
version = "0.1.0"
description = ""
authors = ["Alexey Ostanin <verb11@list.ru>"]
readme = "README.md"
packages = [{include = "admin_panel"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"
python-dotenv = "^1.0.0"
django-split-settings = "^1.2.0"
psycopg2 = "^2.9.5"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
